--- a/website/src/themes/hugo-theme-techdoc/src/scss/theme.scss
+++ b/website/src/themes/hugo-theme-techdoc/src/scss/theme.scss
@@ -1,7 +1,9 @@
 @import 'node_modules/flexbox-grid-mixins/sass/flexbox-grid-mixins';
+@import 'function';
+
 @import 'variable';
-@import "normalize";
-@import "element";
+
+@import "foundation";
 @import "structure";
 @import "component";
 @import "project";
