--- a/website/src/themes/hugo-theme-techdoc/layouts/partials/head.html
+++ b/website/src/themes/hugo-theme-techdoc/layouts/partials/head.html
@@ -11,17 +11,19 @@
 {{- else if isset .Site.Params "description" }}
 <meta name="description" content="{{ .Site.Params.description }}">
 {{- end }}
-{{ .Hugo.Generator }}
+{{ hugo.Generator }}
 <link href="{{ .Site.BaseURL }}index.xml" rel="alternate" type="application/rss+xml">
 <link rel="canonical" href="{{ .Permalink }}">
 <link rel="stylesheet" href="{{"css/theme.min.css" | absURL}}">
 <script src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
 {{ partial "meta/chroma.html" . -}}
 <script src="https://cdn.jsdelivr.net/npm/jquery@3.3.1/dist/jquery.min.js"></script>
-<script src="{{"js/functions.min.js" | absURL}}"></script>
 <script src="https://cdn.jsdelivr.net/npm/jquery.easing@1.4.1/jquery.easing.min.js"></script>
-<script src="{{"js/jquery.backtothetop/jquery.backtothetop.min.js" | absURL}}"></script>
+<script src="{{"js/bundle.js" | absURL}}"></script>
 {{- partial "meta/google-analytics-async.html" . -}}
 {{- partial "meta/tag-manager.html" . -}}
 {{- partial "meta/google-site-verification.html" . -}}
-
+{{- partial "custom-css.html" . -}}
+{{- template "_internal/opengraph.html" . -}}
+{{- template "_internal/twitter_cards.html" . -}}
+{{- template "_internal/schema.html" . -}}
