--- a/website/src/themes/hugo-theme-techdoc/src/scss/_variable.scss
+++ b/website/src/themes/hugo-theme-techdoc/src/scss/_variable.scss
@@ -1,40 +1,41 @@
-$default-layout-width: 1100px;
-$default-layout-margin: 2%;
+$default-layout-width: 1024px;
 
-$default-font-size: 1rem;
+$default-font-size: 100%;
+$default-line-space: 8px;
+$default-line-height: line-height($default-line-space, $default-font-size);
+$default-stack: stack($default-line-height, $default-font-size) * 4;
+
+$default-layout-margin: 0;
+$default-layout-padding: $default-stack;
+
 $default-font-color: #000;
-$default-font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-
-$default-line-height: 1.9;
-$default-margin: 2rem;
-$default-padding: 1.2rem;
-
-$default-grid-columns: 12;
-$default-grid-gutter: 2%;
+$default-font-family: -apple-system, BlinkMacSystemFont, "游ゴシック体", YuGothic, "メイリオ", Meiryo, "Helvetica Neue", HelveticaNeue, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 
 // color
 $default-background-color: #fafafa;
+$default-border-color: #f0f0f0;
+
+$default-link-text-color: #2e7eb3;
+$default-link-text-hover-color: #38a0e4;
 
 $sidebar-background-color: #f9f9f9;
 $sidebar-hover-color: #eee;
 $sidebar-active-color: #eee;
 
-$default-link-color: #2e7eb3;
-$default-link-hover-color: #38a0e4;
-
-$default-line-color: #f0f0f0;
-
 // code
 $code-font-size: .95rem;
-$code-font-family: Consolas,"Liberation Mono",Menlo,Courier,monospace;
 $code-block-background-color: #f4f6f8;
 $code-border-color: #f0f0f0;
 $code-inline-background-color: #f0f0f0;
+$code-font-family: Consolas,"Liberation Mono",Menlo,Courier,monospace;
 
 // breakpoint
 $default-breakpoints: (
-  lg: 1200px,
-  md: 980px,
-  sm: 767px,
-  xs: 480px
+	xl: 1280px,
+	lg: 1024px,
+	md: 896px,
+	sm: 768px,
+	xs: 480px
 );
+
+$flexbox-grid-mixins-box-sizing: null;
